Spacing issue

--- a/themes/docroot/css/common-advanced-override.css
+++ b/themes/docroot/css/common-advanced-override.css
@@ -20,8 +20,9 @@
 .networkmap .showinfo{display:inline-block;}
 .networkmap .table td{border-top:none;border-color:#004D9D;padding-top:0px;padding-bottom:0px;width:12.5%;}
 .networkmap .table td .tooltip-inner{text-align:left;}
-.smallcard .header{background-image:none;border-bottom:0px;font-size:20px;font-weight:400;text-shadow:none;}
 .smallcard{border:0px;font-family:Roboto,Noto,sans-serif;font-weight:400;}
+.smallcard .header{background-image:none;border-bottom:0px;font-size:20px;font-weight:400;text-shadow:none;}
+.smallcard .subinfos{margin-top:1px;margin-bottom:0px;}
 [class^="icon-"],[class*=" icon-"]{display:inline-block;width:18px;}
 body{font-family:Roboto,Noto,sans-serif;}
 input,button,select,textarea{font-family:Roboto,Noto,sans-serif;}
